# Frida-poc

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
bench/: README.md  benchmark.sh
bench/avail/: Cargo.toml  benchmark.sh
bench/avail/benchmark/: Cargo.toml
bench/avail/benchmark/src/: main.rs
bench/avail/runtime/: Cargo.toml
bench/avail/runtime/src/: lib.rs  main.rs
bench/data_structure/: data_structure.rs  main.rs
bench/defrida/: benchmark.sh  main.rs
bench/eigenda/: .gitignore  benchmark.sh  go.mod  go.sum  main.go  setup.sh
bench/fri/: benchmark.sh  main.rs
bench/frida/: benchmark.sh  main.rs
bench/src/: common.rs  defrida.rs  frida.rs  main.rs  single_frida.rs
src/: error.rs  frida_commit.rs  frida_const.rs  frida_data.rs  frida_error.rs  frida_prover_channel.rs  frida_queries.rs  frida_random.rs  frida_verifier.rs  frida_verifier_channel.rs  lib.rs  main.rs  winterfell.rs
src/commands/: cli.rs  commit.rs  generate_data.rs  mod.rs  open.rs  verify.rs
src/core/: data.rs  mod.rs  queries.rs  random.rs
src/frida_prover/: base_tests.rs  channel.rs  mod.rs  proof.rs  traits.rs
src/frida_verifier/: channel.rs  das.rs  mod.rs  test.rs  traits.rs  verifier.rs  verifier2.rs  verifier_deprecated.rs
src/prover/: builder.rs  channel.rs  mod.rs
src/prover/tests/: base_tests.rs  distributed_api_tests.rs  distributed_tests.rs  mod.rs
src/utils/: mod.rs  test_utils.rs
src/verifier/: channel.rs  das.rs  mod.rs
src/verifier/tests/: das_tests.rs  e2e.rs  integration.rs  mod.rs
(+33 files in other folders)
