[package]
name = "frida-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "benchmark"
path = "bench/fri/main.rs"
features = ["bench"]

[features]
concurrent = ["winter-crypto/concurrent", "winter-fri/concurrent", "winter-math/concurrent", "winter-utils/concurrent"]
bench = []

[dependencies]
winter-crypto = "0.9.0"
winter-fri = "0.9.0"
winter-math = "0.9.0"
winter-rand-utils = "0.9.0"
winter-utils = "0.9.0"
