[package]
name = "frida-poc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frida-bench"
path = "bench/src/main.rs"
required-features = ["bench"]

[[bin]]
name = "cli"
path = "src/main.rs"
required-features = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
concurrent = [
    "winter-crypto/concurrent",
    "winter-fri/concurrent",
    "winter-math/concurrent",
    "winter-utils/concurrent",
]
bench = []
cli = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3.0"
winter-crypto = "0.9.0"
winter-fri = "0.9.0"
winter-math = "0.9.0"
winter-rand-utils = "0.9.0"
winter-utils = "0.9.0"
